图标图片工具整理

--- a/tools/index.html
+++ b/tools/index.html
@@ -282,17 +282,17 @@
           },
           {
             isOwner: true,
-            name: 'Android  JSBridge 调试',
-            intro: '子勰的Jsbridge测试Demo，使用方式链接有介绍',
-            img: 'https://android.bihe0832.com/doc/tools/jsbridge_result.png',
-            url: 'https://cdn.bihe0832.com/tools/jsbridge/index.html'
+            name: '图片图标处理',
+            intro: '开发中图片、图标处理相关的资源链接',
+            img: './images/android_res.png',
+            url: 'https://blog.bihe0832.com/my_image.html'
           },
           {
             isOwner: true,
-            name: 'Smart Resize',
-            intro: '也许是世界上最快且最智能的在线批量裁剪图片工具',
-            img: 'https://www.smartresize.com/css/logo.png',
-            url: 'https://www.smartresize.com/zh-cn'
+            name: 'Android JSBridge 调试',
+            intro: '子勰的Jsbridge测试Demo，使用方式链接有介绍',
+            img: 'https://android.bihe0832.com/doc/tools/jsbridge_result.png',
+            url: 'https://cdn.bihe0832.com/tools/jsbridge/index.html'
           },
           {
               isOwner: true,
@@ -307,6 +307,13 @@
               intro: 'Linux & MacOS 常用命令，例如xargs、find、kil、chmo、chown、crontab、pbcopy、pbpaste、open、screencapture、lsof',
               img: 'https://cdn.bihe0832.com/images/cv_512.jpg',
               url: 'https://blog.bihe0832.com/mac_linux_command_during_developping.html'
+          },
+          {
+            isOwner: true,
+            name: 'Smart Resize',
+            intro: '也许是世界上最快且最智能的在线批量裁剪图片工具',
+            img: 'https://www.smartresize.com/css/logo.png',
+            url: 'https://www.smartresize.com/zh-cn'
           },
           {
             isOwner: false,
@@ -330,13 +337,6 @@
             url: 'https://blog.bihe0832.com/tools_for_developer.html'
           },
           {
-            isOwner: false,
-            name: 'Logo制作',
-            intro: '制作类似pubhorn 的Icon',
-            img: './images/logo_diy.jpg',
-            url: 'https://cdn.bihe0832.com/tools/logo/index.html'
-          },
-          {
             isOwner: true,
             name: '多码合一',
             intro: '通过这几个JS接口，可以轻松获取到当前打开页面的浏览器类型',
@@ -345,17 +345,17 @@
           },
           {
             isOwner: false,
+            name: 'Logo制作',
+            intro: '制作类似pubhorn 的Icon',
+            img: './images/logo_diy.jpg',
+            url: 'https://cdn.bihe0832.com/tools/logo/index.html'
+          },
+          {
+            isOwner: false,
             name: 'shields.io',
             intro: '专为开源项目设计的在Github、文档等场景展示项目各种信息的工具库',
             img: './images/shields_io.png',
             url: 'https://img.shields.io/'
-          },
-          {
-            isOwner: false,
-            name: 'ascii字符画',
-            intro: '根据文字、图片、流程图生成字符画：',
-            img: './images/ascii.png',
-            url: 'https://blog.bihe0832.com/tools_for_developer.html'
           },
           {
             isOwner: true,
