--- a/tools/test.html
+++ b/tools/test.html
@@ -298,14 +298,14 @@ new Vue({
           [
             { name: '空白页', onlineURL: 'https://cdn.bihe0832.com/blank.html' },
             { name: '简洁版空白页', onlineURL: 'https://cdn.bihe0832.com/blank_simple.html' },
-            { name: '全局CSS', onlineURL: 'http://cdn.bihe0832.com/css/global.css' },
-            { name: 'Markdown CSS', onlineURL: 'http://cdn.bihe0832.com/css/markdown.css' },
-            { name: 'Markdown Table CSS', onlineURL: 'http://cdn.bihe0832.com/css/markdown-table.css' },
-            { name: 'bootstrap', onlineURL: 'http://cdn.bihe0832.com/css/bootstrap.min.css' },
-            { name: 'jquery', onlineURL: 'http://cdn.bihe0832.com/js/jquery-1.9.1.min.js' },
-            { name: 'Vue', onlineURL: 'http://cdn.bihe0832.com/js/js/vue/2.6.10/vue.min.js' },
+            { name: '全局CSS', onlineURL: 'https://cdn.bihe0832.com/css/global.css' },
+            { name: 'Markdown CSS', onlineURL: 'https://cdn.bihe0832.com/css/markdown.css' },
+            { name: 'Markdown Table CSS', onlineURL: 'https://cdn.bihe0832.com/css/markdown-table.css' },
+            { name: 'bootstrap', onlineURL: 'https://cdn.bihe0832.com/css/bootstrap.min.css' },
+            { name: 'jquery', onlineURL: 'https://cdn.bihe0832.com/js/jquery-1.9.1.min.js' },
+            { name: 'Vue', onlineURL: 'https://cdn.bihe0832.com/js/js/vue/2.6.10/vue.min.js' },
             { name: 'vConsole', onlineURL: 'https://cdn.bihe0832.com/js/vconsole.min.js' },
-            { name: '多码合一', onlineURL: 'http://cdn.bihe0832.com/js/brower.js' },
+            { name: '多码合一', onlineURL: 'https://cdn.bihe0832.com/js/brower.js' },
           ]
         },
         {
@@ -338,7 +338,7 @@ new Vue({
     ['audioList'].forEach((subject) => {
       let tempList = []
       this[subject].forEach((item) => {
-        tempList.push('http://cdn.bihe0832.com/audio/' + item);
+        tempList.push('https://cdn.bihe0832.com/audio/' + item);
       })
       this[subject] = tempList;
     }),
@@ -346,7 +346,7 @@ new Vue({
     ['pictureList'].forEach((subject) => {
       let tempList = []
       this[subject].forEach((item) => {
-        tempList.push('http://cdn.bihe0832.com/images/' + item);
+        tempList.push('https://cdn.bihe0832.com/images/' + item);
       })
       this[subject] = tempList;
     })
@@ -354,7 +354,7 @@ new Vue({
     // ['videoList'].forEach((subject) => {
     //   let tempList = []
     //   this[subject].forEach((item) => {
-    //     tempList.push('http://cdn.bihe0832.com/video/' + item);
+    //     tempList.push('https://cdn.bihe0832.com/video/' + item);
     //   })
     //   this[subject] = tempList;
     // })
