--- a/tools/jsbridge/index.html
+++ b/tools/jsbridge/index.html
@@ -8,6 +8,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="format-detection" content="telephone=no">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
+<meta http-equiv="Expires" content="0">
 <link rel="stylesheet" href="https://cdn.bihe0832.com/css/global.css" type="text/css" media="screen" />
 <link rel = "Shortcut Icon" href="https://blog.bihe0832.com/public/img/favicon.ico">
 <script type="text/javascript" src="https://cdn.bihe0832.com/js/jsbridge.js" charset="UTF-8"></script>
