--- a/tools/router/jump.html
+++ b/tools/router/jump.html
@@ -9,6 +9,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
+  <meta http-equiv="Expires" content="0">
   <link rel="stylesheet" href="https://cdn.bihe0832.com/css/global.css" type="text/css" media="screen" />
   <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico">
   <script type="text/javascript" src="https://cdn.bihe0832.com/js/brower.js" charset="UTF-8"></script>
