--- a/blank.html
+++ b/blank.html
@@ -5,10 +5,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="format-detection" content="telephone=no" />
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
+  <meta http-equiv="Expires" content="0">
   <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico" />
 
   <title>子勰的空白页面</title>
-  <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com" />
+  <meta name="author" content="子勰(bihe0832), code@bihe0832.com" />
   <meta name="keywords" content="子勰,bihe0832" />
   <meta name="description" content="子勰的空白页面" />
   <meta property="og:title" content="首页" />
