--- a/blank_simple.html
+++ b/blank_simple.html
@@ -5,6 +5,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="format-detection" content="telephone=no" />
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
+  <meta http-equiv="Expires" content="0">
   <script type="text/javascript" charset="UTF-8">
     var _mtac = {};
     (function () {
