--- a/tools/test.html
+++ b/tools/test.html
@@ -4,7 +4,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta name="format-detection" content="telephone=no" />
+  <meta name="format-detection" content="telephone=no" />    
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
+  <meta http-equiv="Expires" content="0">
   <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico" />
 
   <title>子勰常用资源</title>
