--- a/tools/index.html
+++ b/tools/index.html
@@ -318,13 +318,13 @@
             img: 'https://android.bihe0832.com/doc/tools/jsbridge_result.png',
             url: 'https://cdn.bihe0832.com/tools/jsbridge/index.html'
           },
-          {
-            isOwner: true,
-            name: 'Smart Resize',
-            intro: '也许是世界上最快且最智能的在线批量裁剪图片工具',
-            img: 'https://www.smartresize.com/css/logo.png',
-            url: 'https://www.smartresize.com/zh-cn'
-          },
+          // {
+          //   isOwner: true,
+          //   name: 'Smart Resize',
+          //   intro: '也许是世界上最快且最智能的在线批量裁剪图片工具',
+          //   img: 'https://www.smartresize.com/css/logo.png',
+          //   url: 'https://www.smartresize.com/zh-cn'
+          // },
           {
               isOwner: true,
               name: 'Markdown',
