--- a/tools/test.html
+++ b/tools/test.html
@@ -322,7 +322,7 @@ new Vue({
           ]
         },
         {
-          title:"其他资源",
+          title:"M3U8资源",
           data:
           [
             { name: 'CCTV1高清', onlineURL: 'http://ivi.bupt.edu.cn/hls/cctv1hd.m3u8' },
@@ -332,6 +332,16 @@ new Vue({
             { name: 'CCTV6高清', onlineURL: 'http://ivi.bupt.edu.cn/hls/cctv6hd.m3u8' }
           ]
         },
+        {
+          title:"SVGA资源",
+          data:
+          [
+            { name: '圣诞树', onlineURL: 'https://cdn.bihe0832.com/tools/svga/christmas.svga' },
+            { name: '皇冠', onlineURL: 'https://cdn.bihe0832.com/tools/svga/kingset.svga' },
+            { name: '跑车', onlineURL: 'https://cdn.bihe0832.com/tools/svga/paoche.svga' },
+            { name: '桃花', onlineURL: 'https://cdn.bihe0832.com/tools/svga/taohua.svga' }
+          ]
+        }
       ]
     }
   },
