--- a/tools/index.html
+++ b/tools/index.html
@@ -291,6 +291,13 @@
             url: 'https://blog.bihe0832.com/my_android.html'
           },
           {
+            isOwner: true,
+            name: 'AAF 更新配置可视化生成工具',
+            intro: '通过WebUI 添加版本信息，自动生成版本更新的配置文件',
+            img: './images/aaf_update.png',
+            url: 'https://cdn.bihe0832.com/tools/config/update.html'
+          },
+          {
               isOwner: true,
               name: 'Git 常用命令',
               intro: 'Git 常用命令整理（包括branch、tag、多账号配置、日志等~）',
