--- a/tools/config/update.html
+++ b/tools/config/update.html
@@ -163,23 +163,20 @@
           <label>最新版本版本介绍「newVersionInfo」:</label>
           <input type="text" id="newVersionInfo" name="newVersionInfo" />
 
-          <label>红点版本号（该版本及以下显示红点，可选、强更必有红点）「showRedMaxVersionCode」:</label>
+          <label>红点版本号（当前及以下版本显示红点，可选、强更必有红点）「showRedMaxVersionCode」:</label>
           <input type="text" id="showRedMaxVersionCode" name="showRedMaxVersionCode" />
 
-          <label>可选更新最高版本（该版本及以下弹框）「needUpdateMinVersionCode」:</label>
+          <label>可选更新最高版本（当前及以下版本弹框）「needUpdateMinVersionCode」:</label>
           <input type="text" id="needUpdateMinVersionCode" name="needUpdateMinVersionCode" />
 
-          <label>强制更新最高版本号（该版本及以下强更）「forceUpdateMinVersionCode」:</label>
+          <label>强制更新最高版本号（当前及以下版本强更）「forceUpdateMinVersionCode」:</label>
           <input type="text" id="forceUpdateMinVersionCode" name="forceUpdateMinVersionCode" />
-
-
-          <label>强制更新特殊版本列表（该版本必强更，多个空格分割）「forceUpdateList」:</label>
-          <input type="text" id="forceUpdateList" name="forceUpdateList" />
 
           <label>弹框更新特殊版本列表（该版本必弹框，多个空格分割）「needUpdateList」:</label>
           <input type="text" id="needUpdateList" name="needUpdateList" />
-          <br />
 
+          <label>强制更新特殊版本列表（该版本必强更，多个空格分割）「forceUpdateList」:</label>
+          <input type="text" id="forceUpdateList" name="forceUpdateList" />
 
         </form>
       </div>
