--- a/tools/index.html
+++ b/tools/index.html
@@ -292,7 +292,7 @@
           },
           {
             isOwner: true,
-            name: 'AAF 更新配置可视化生成工具',
+            name: 'AAF 更新配置生成工具',
             intro: '通过WebUI 添加版本信息，自动生成版本更新的配置文件',
             img: './images/aaf_update.png',
             url: 'https://cdn.bihe0832.com/tools/config/update.html'
