取消仅Android 的限制

--- a/tools/router/index.html
+++ b/tools/router/index.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>Android路由跳转链接生成工具 — 子勰</title>
+    <title>终端路由跳转链接生成工具 — 子勰</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-            <h4>Android路由跳转链接生成工具 — <a href="https://blog.bihe0832.com" target="_blank">子勰</a></h4>
+            <h4>终端路由跳转链接生成工具 — <a href="https://blog.bihe0832.com" target="_blank">子勰</a></h4>
             <div>
                 <p> 在页面下方输入路由地址后点击「生成二维码」即可生成支持打开路由的跳转地址 </p>
             </div>
