--- a/tools/index.html
+++ b/tools/index.html
@@ -292,6 +292,13 @@
           },
           {
             isOwner: true,
+            name: '书籍推荐配置生成工具',
+            intro: '通过WebUI 添加信息，自动生成书籍推荐的配置文件',
+            img: 'https://imgservice.suning.cn/uimg1/b2c/image/b1w1h8SRYQeryB5hPwRzuw.jpg',
+            url: 'https://cdn.bihe0832.com/tools/book/book.html'
+          },
+          {
+            isOwner: true,
             name: 'AAF 更新配置生成工具',
             intro: '通过WebUI 添加版本信息，自动生成版本更新的配置文件',
             img: './images/aaf_update.png',
