增加美化后文案

--- a/tools/book/book.html
+++ b/tools/book/book.html
@@ -159,10 +159,16 @@
           <label>作者「author」:</label>
           <input type="text" id="author" name="author" />
 
-          <label>简介「desc」:</label>
+          <label>简介文本「descText」:</label>
+          <input type="text" id="descText" name="descText" />
+
+          <label>优化后简介「desc」:</label>
           <input type="text" id="desc" name="desc" />
 
-          <label >推荐语「recommend」:</label>
+          <label >推荐语文本「recommendText」:</label>
+          <input type="text" id="recommendText" name="recommendText" />
+
+          <label >优化后推荐语「recommend」:</label>
           <input type="text" id="recommend" name="recommend" />
 
           <label >封面「photo」:</label>
