--- a/tools/book/book.html
+++ b/tools/book/book.html
@@ -174,6 +174,8 @@
           <label >封面「photo」:</label>
           <input type="text" id="photo" name="photo" />
       
+          <label >本地目录「localFolder」:</label>
+          <input type="text" id="localFolder" name="localFolder" />
         </form>
       </div>
       <div class="right">
