--- a/tools/book/book.html
+++ b/tools/book/book.html
@@ -171,11 +171,11 @@
           <label >优化后推荐语「recommend」:</label>
           <input type="text" id="recommend" name="recommend" />
 
-          <label >封面「photo」:</label>
-          <input type="text" id="photo" name="photo" />
-      
           <label >本地目录「localFolder」:</label>
           <input type="text" id="localFolder" name="localFolder" />
+
+          <label >豆瓣ID:</label>
+          <input type="text" id="doubanID" name="doubanID" />
         </form>
       </div>
       <div class="right">
