--- a/tools/book/book.html
+++ b/tools/book/book.html
@@ -176,6 +176,9 @@
 
           <label >豆瓣ID:</label>
           <input type="text" id="doubanID" name="doubanID" />
+
+          <label >微信读书ID:</label>
+          <input type="text" id="wereadID" name="wereadID" />
         </form>
       </div>
       <div class="right">
