--- a/tools/book/book.html
+++ b/tools/book/book.html
@@ -156,9 +156,6 @@
           <label>书名「bookList」:</label>
           <input type="text" id="bookList" name="bookList" />
 
-          <label>作者「author」:</label>
-          <input type="text" id="author" name="author" />
-
           <label>简介文本「descText」:</label>
           <input type="text" id="descText" name="descText" />
 
@@ -179,6 +176,9 @@
 
           <label >微信读书ID:</label>
           <input type="text" id="wereadID" name="wereadID" />
+
+          <label>作者「author」(可不填):</label>
+          <input type="text" id="author" name="author" />
         </form>
       </div>
       <div class="right">
