升级基础库

--- a/tools/book/book.html
+++ b/tools/book/book.html
@@ -171,6 +171,9 @@
           <label >本地目录「localFolder」:</label>
           <input type="text" id="localFolder" name="localFolder" />
 
+          <label >推荐年龄「bestage」:</label>
+          <input type="text" id="bestage" name="bestage" />
+
           <label >豆瓣ID:</label>
           <input type="text" id="doubanID" name="doubanID" />
 
@@ -179,6 +182,10 @@
 
           <label>作者「author」(可不填):</label>
           <input type="text" id="author" name="author" />
+
+          <label >Json 版本「version」:</label>
+          <input type="text" id="version" name="version" value="1" readOnly="true"/>
+
         </form>
       </div>
       <div class="right">
@@ -219,7 +226,7 @@
     formData.forEach((value, key) => {
       data[key] = value;
     });
-    localStorage.setItem('book_form_data_new', JSON.stringify(data));
+    localStorage.setItem('book_form_data_new_1', JSON.stringify(data));
     const json = JSON.stringify(data, null, "<BR>&nbsp;&nbsp;&nbsp;&nbsp;").replace(/}$/, '<BR>}');;
     output.innerHTML = json;
     copyButton.innerHTML = "在左侧窗格输入配置，右侧即可生成工具Json；点击此处一键复制到剪切板"
