--- a/tools/book/list.html
+++ b/tools/book/list.html
@@ -56,7 +56,7 @@
         bookItem.className = 'book-item';
 
         const bookImage = document.createElement('img');
-        bookImage.src = data.photo;
+        bookImage.src = './photos/' + data.title + '_photo.jpg';
         bookImage.alt = data.title;
 
         const bookTitle = document.createElement('h3');
