--- a/tools/book/list.html
+++ b/tools/book/list.html
@@ -1,9 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>书籍列表</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
+  <meta http-equiv="Expires" content="0">
+  <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico" />
+
+  <title>书籍推荐列表</title>
+  <meta name="author" content="子勰(bihe0832), code@bihe0832.com" />
+  <meta name="keywords" content="子勰,bihe0832" />
+  <meta name="description" content="书籍推荐列表" />
+  <meta property="og:title" content="首页" />
+  <meta property="og:locale" content="en_US" />
+  <meta name="google-site-verification" content="3wzNgbjvFNHkH-8QpougMZ0s9Y4GEjG49kEb49QQqpw" />
+  <meta property="og:description" content="" />
+  <link rel="canonical" href="https://blog.bihe0832.com/" />
+  <meta property="og:url" content="https://blog.bihe0832.com/" />
+  <meta property="og:site_name" content="书籍推荐列表" />
+  <meta property="og:type" content="article" />
+  <script type="application/ld+json">
+  {
+      "@type":"BlogPosting",
+      "url":"https://blog.bihe0832.com/",
+      "headline":"首页",
+      "dateModified":" 2021-01-06 17:28:45 +0800",
+      "datePublished":" ",
+      "author":{"@type":"Person","name":"子勰"},
+      "description":"",
+      "publisher":{
+          "@type":"Organization",
+          "name":"子勰",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://blog.bihe0832.com/public/img/head.jpg"
+          }
+        },
+      "image": "https://blog.bihe0832.com/public/img/cv.png",
+      "mainEntityOfPage":{"@type":"WebPage",
+      "@id":"https://blog.bihe0832.com/"},
+      "@context":"http://schema.org"
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "",
+        "item": "https://blog.bihe0832.com/"
+      },{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "首页",
+        "item": "https://blog.bihe0832.com/"
+      }]
+    }
+  </script>
   <style>
     #book-list {
       display: flex;
@@ -39,6 +98,7 @@
   </style>
 </head>
 <body>
+  <h2 class="title">皮卡丘书单推荐</h2>
   <div id="book-list">
     <!-- 书籍列表的HTML结构将在这里插入 -->
   </div>
