--- a/tools/book/list.html
+++ b/tools/book/list.html
@@ -116,7 +116,7 @@
         bookItem.className = 'book-item';
 
         const bookImage = document.createElement('img');
-        bookImage.src = './photos/' + data.title + '_photo.jpg';
+        bookImage.src = './photos/' + data.localFolder + '_photo.jpg';
         bookImage.alt = data.title;
 
         const bookTitle = document.createElement('h3');
