--- a/tools/book/list.html
+++ b/tools/book/list.html
@@ -122,7 +122,7 @@
         const bookTitle = document.createElement('h3');
         bookTitle.textContent = data.title;
 
-        const bookAge = document.createElement('h5');
+        const bookAge = document.createElement('p');
         bookAge.textContent = "推荐年龄：" + data.bestage;
 
         const bookLink = document.createElement('a');
