--- a/tools/book/list.html
+++ b/tools/book/list.html
@@ -98,7 +98,7 @@
   </style>
 </head>
 <body>
-  <h2 class="title">皮卡丘书单推荐</h2>
+  <h2 class="title">皮卡丘的图书馆</h2>
   <div id="book-list">
     <!-- 书籍列表的HTML结构将在这里插入 -->
   </div>
@@ -127,6 +127,7 @@
 
         const bookLink = document.createElement('a');
         bookLink.href = data.xiaohongshu;
+        bookLink.target = "_blank"
         bookLink.textContent = '查看详情';
 
         bookItem.appendChild(bookImage);
