--- a/tools/book/book.html
+++ b/tools/book/book.html
@@ -189,6 +189,7 @@
         </form>
       </div>
       <div class="right">
+        <a class="title" href="https://cdn.bihe0832.com/tools/book/list.html" target="_blank"><label >点击前往皮卡丘的图书馆</label></a>
         <div id="copy-button" class="button"></div>
         <div id="json-output"></div>
         <div id="update-result" class="button"></div>
