--- a/tools/index.html
+++ b/tools/index.html
@@ -299,6 +299,13 @@
           },
           {
             isOwner: true,
+            name: '皮卡丘图书馆',
+            intro: '皮卡丘书单推荐系列',
+            img: 'https://cdn.bihe0832.com/tools/book/photos/%E6%95%B4%E4%BD%93%E5%85%BB%E8%82%B2_photo.jpg',
+            url: 'https://cdn.bihe0832.com/tools/book/list.html'
+          },
+          {
+            isOwner: true,
             name: 'AAF 更新配置生成工具',
             intro: '通过WebUI 添加版本信息，自动生成版本更新的配置文件',
             img: './images/aaf_update.png',
