--- a/tools/index.html
+++ b/tools/index.html
@@ -301,7 +301,7 @@
             isOwner: true,
             name: '皮卡丘图书馆',
             intro: '皮卡丘书单推荐系列',
-            img: 'https://cdn.bihe0832.com/tools/book/photos/%E6%95%B4%E4%BD%93%E5%85%BB%E8%82%B2_photo.jpg',
+            img: 'https://imgservice.suning.cn/uimg1/b2c/image/b1w1h8SRYQeryB5hPwRzuw.jpg',
             url: 'https://cdn.bihe0832.com/tools/book/list.html'
           },
           {
