--- a/tools/book/list.html
+++ b/tools/book/list.html
@@ -106,7 +106,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
   <script>
     async function fetchData() {
-      const response = await fetch('https://cdn.bihe0832.com/tools/book/book_simple.json');
+      const response = await fetch('book_simple.json');
       const dataList = await response.json();
 
       const bookList = document.getElementById('book-list');
