新增开发套件

--- a/tools/index.html
+++ b/tools/index.html
@@ -256,18 +256,25 @@
             url: 'https://android.bihe0832.com/doc/summary/links.html'
           },
           {
-            isOwner: true,
-            name: 'Schema拉起Android应用',
-            intro: 'H5页面通过指定Schema拉起Android应用',
-            img: 'https://android.bihe0832.com/doc/tools/router_page.png',
-            url: 'https://cdn.bihe0832.com/tools/router/index.html'
-          },
-          {
-            isOwner: true,
+            isOwner: false,
             name: '开发常用资源',
             intro: '开发中常用的资源，静态资源例如空页面、CSS；方便开发测试的各种素材等',
             img: 'https://cdn.bihe0832.com/images/cv_512.jpg',
             url: 'https://cdn.bihe0832.com/tools/test.html'
+          },
+          {
+            isOwner: true,
+            name: 'Gliffy Diagrams',
+            intro: 'Gliffy Diagrams适合于：基本绘图、流程图、 UML图表、网络图表、线框图和图样、网站地图、业务流程模型、组织机构图、平面图、文氏图、四点分析、技术图等。',
+            img: 'https://help.gliffy.com/online/Skins/Fluid/Stylesheets/Images/gliffy-logo-text.png',
+            url: 'https://go.gliffy.com/go/html5/launch'
+          },
+          {
+            isOwner: false,
+            name: 'JSON Editor Online',
+            intro: '在一个简洁的界面，它使您能够快速创建，查看、编辑和格式化你的JSON文件。',
+            img: 'https://jsoneditoronline.org/docs/images/panels.png',
+            url: 'https://jsoneditoronline.org/'
           },
           {
             isOwner: false,
@@ -282,6 +289,13 @@
             intro: '常用颜色、透明度查询等参考工具，独立开发时，可临时顶替使用',
             img: './images/color.jpeg',
             url: './color.html'
+          },
+          {
+            isOwner: true,
+            name: 'Schema拉起Android应用',
+            intro: 'H5页面通过指定Schema拉起Android应用',
+            img: 'https://android.bihe0832.com/doc/tools/router_page.png',
+            url: 'https://cdn.bihe0832.com/tools/router/index.html'
           },
           {
             isOwner: true,
