书籍版本分类

--- a/tools/book/book.html
+++ b/tools/book/book.html
@@ -148,7 +148,7 @@
       <div class="left">
         <form>
           <label>书籍分类「category」（如育儿之道）:</label>
-          <input type="text" id="category" name="category" />
+          <input type="text" id="category" name="category"  value="绘本书单"/>
 
           <label >系列名称「title」（如整体养育）:</label>
           <input type="text" id="title" name="title" />
